# pocket-claude

./: .gitignore  API_PLAN.md  CLAUDE.md  README.md  claude_setup.sh
.claude/: settings.json
.claude/agents/: AGENT.md
.claude/hooks/: enhance-prompt.sh  run-tests-on-stop.sh
api/: .env.example  .gitignore  dockerfile  pyproject.toml  requirements.txt
api/app/: main.py
api/app/api/v1/: router.py
api/app/api/v1/controllers/: claude_controller.py  git_controller.py  hello_controller.py  task_controller.py
api/app/api/v1/routes/: claude_routes.py  git_routes.py  hello_routes.py  task_routes.py
api/app/core/: __init__.py  config.py  database.py  encryption.py  error_handlers.py  exceptions.py
api/app/middleware/: logging_middleware.py
api/app/models/: claude_models.py  db_models.py  git_models.py  task_models.py
api/app/services/: claude_service.py  git_service.py  hello_service.py  project_service.py  session_service.py  task_service.py
api/app/utils/: path_utils.py
api/tests/: conftest.py  test_api_endpoints.py  test_claude_service.py  test_git_routes.py  test_git_service.py  test_project_service.py  test_session_service.py  test_task_endpoints.py
app/: .env.example  CLAUDE.md  capacitor.config.ts  package.json  pnpm-lock.yaml
app/android/: capacitor.settings.gradle
app/android/app/: build.gradle  capacitor.build.gradle
app/examples/: index.html
app/ios/App/App.xcodeproj/: project.pbxproj
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
docs/: GIT_OAUTH_SETUP.md  TOKEN_STORAGE_MIGRATION.md
(+46 files in other folders)
