[project]
name = "doc-intel-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",  # Required for OAuth token exchange and refresh operations
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "cryptography>=44.0.0",
    "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-describe>=3.1.0",
]
